--- a/jbehave/jbehave.resources.stories.searchTextDemo.html
+++ b/jbehave/jbehave.resources.stories.searchTextDemo.html
@@ -6,5 +6,6 @@
 <div class="step successful">Given I access Baidu site</div>
 <div class="step successful">When I search text on Baidu</div>
 <div class="step successful">Then I should see the search result</div>
+<div class="step successful">When I nevigate a result link randomly</div>
 </div>
 </div>
